<!-- SPDX-FileCopyrightText: no
     SPDX-License-Identifier: CC0-1.0
-->

This is the changelog for Calamares. For each release, the major changes and
contributors are listed. Note that Calamares does not have a historical
changelog -- this log starts with version 3.3.0. See CHANGES-3.2 for
the history of the 3.2 series (2018-05 - 2021-12).

# 3.3.0 (unreleased) #

This release contains contributions from (alphabetically by first name):
 - Evan James
 - Vitor Lopes

## Core ##
 - CMake 3.16, Qt 5.15 are now required; the newer CMake is to support
   new features (also for KDE Frameworks), Qt is the current LTS version.
 - KDE Framework "DBusAddons" is now required, and is used to "activate"
   Calamares; the KDAB Single Application Guard is no longer used.
   KDSAG needed patching to chase Qt 5.15 deprecations, and the DBus
   activation code is tried and tested in Frameworks (tier 1).
   Running `calamares -d` no longer enforces a single-application
   (it is for debugging purposes, after all).
 - Python 3.6 or later is now required, to allow for F-strings in
   Python code and allow other tidy-ups in the Python modules.
   Boost::Python now requires 1.67 or later (for CMake support).

## Modules ##
 - *bootloader* now supports more options when building the kernel
   command-line. (Thanks Evan)